--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="Technology">Technology</string>
     <string name="favoriteNews">Favorite News</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="group_title">Others</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -31,8 +32,8 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+        completions."</string>
+
     <string name="Authentication_failed">Authentication failed </string>
     <string name="Authentication_success">Authentication success </string>
     <string name="not_member">Not a member?  create new account </string>
