--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="widget_key">MyPrefs </string>
     <string name="title">title </string>
     <string name="time">time </string>
-
+    <string name="ok">ok </string>
 
 
 
